src/app/search-results/search-results.component.scss
.clickable-title {
  font-size: 24px;
  cursor: pointer;
  color: var(--main-blue);
}

.clickable-title:hover {
  color: var(--sky-blue);
  text-decoration: underline;
}

.dataset-item {
  display: flex;
    flex-direction: column;
    padding: 2rem;
    margin-bottom: 3rem;
    border: 1px solid #ccc;
    border-radius: 5px;
    background-color: transparent;
}

.dataset-metadata {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  gap: 4rem;
}

.metadata-left {
  width: 65%;
}

.metadata-sidebar {
  width: 30%;
}

.metadata-sidebar h4 {
  margin-top: 0;
  color: #605f59;
  font-size: 1em;
  margin-bottom: 10px;
}

.metadata-sidebar p {
  color: #605f59;
  margin: 5px 0;
}

.metadata-sidebar p strong {
  color: #605f59;
  font-weight: bold;
}

.dataset-item h3 {
  margin-top: 0;
  margin-bottom: 5px;
  color: #004e70;
  font-size: 1.25em;
}

.dataset-item .by-line {
  margin: 0;
}

.dataset-item .category-pill {
  display: inline-block;
  background-color: #dbedf8;
  color: #004e70;
  padding: 3px 8px;
  border-radius: 15px;
  font-size: 0.85em;
  margin-right: 5px;
}

.dataset-item p {
  margin: 5px 0;
}

.dataset-item:hover {
  background-color: rgba(219, 237, 248, 0.4);
}

.dataset-link {
  display: inline-block;
  margin-top: 10px;
  color: var(--main-blue);
  text-decoration: none;
  font-weight: bold;
}

.dataset-link:hover {
  text-decoration: underline;
}

.dataset-description-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.dataset-description {
  display: -webkit-box;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  position: relative;
  color: #555;
  transition: max-height 0.3s ease-out;
}

.dataset-description.expanded {
  -webkit-line-clamp: unset;
  max-height: none;
  overflow: visible;
}

.read-more-button {
  background: none;
  border: none;
  color: var(--main-blue);
  cursor: pointer;
  text-align: left;
  padding: 0;
  font-family: inherit;
  font-size: 1.6rem;
  width: fit-content;
}

.read-more-button:hover {
  color: var(--sky-blue);
  text-decoration: underline;
}

.link-button:focus {
  text-decoration: none;
  outline: 2px solid var(--sky-blue);
}

.truncated-description {
  display: -webkit-box;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.5;
  max-height: calc(1.5rem * 5);
}

